--- a/JavaScript_Hands_On/06_DOM/02.html
+++ b/JavaScript_Hands_On/06_DOM/02.html
@@ -18,7 +18,7 @@
 <script>
     const parent = document.querySelector('.parent')
     console.log(parent);
-    // console.log(parent.children);
+    // console.log(parent.children);//here we get html collection so indexing
     // console.log(parent.children[1].innerHTML);
 
     // for (let i = 0; i < parent.children.length; i++) {
